package fr.wakestufou.tetris.controllers;

public class GameController {
    
}
