package fr.wakestufou.tetris.models;

public interface Observer {
    
}
