package fr.wakestufou.tetris.models.Shapes;

import java.awt.Color;

public class JShape extends Shape {

    public JShape(Integer x, Integer y) {
        super(Color.BLUE, x, y, new Boolean[][][] {
            {
                {false, false, false, false},
                {false, true, true, true},
                {false, false, false, true},
                {false, false, false, false}
            },
            {
                {false, false, true, false},
                {false, false, true, false},
                {false, true, true, false},
                {false, false, false, false}
            },
            {
                {false, false, false, false},
                {false, true, false, false},
                {false, true, true, true},
                {false, false, false, false}
            },
            {
                {false, false, false, false},
                {false, false, true, true},
                {false, false, true, false},
                {false, false, true, false}
            }
        });
    }
    
}
