package fr.wakestufou.tetris.models.Shapes;

import java.awt.Color;

public class ZShape extends Shape {

    public ZShape(Integer x, Integer y) {
        super(Color.MAGENTA, x, y, new Boolean[][][] {
            {
                {false, false, false, false},
                {false, true, true, false},
                {false, false, true, true},
                {false, false, false, false}
            },
            {
                {false, false, false, false},
                {false, false, true, false},
                {false, true, true, false},
                {false, true, false, false}
            },
            {
                {false, false, false, false},
                {false, false, false, false},
                {false, true, true, false},
                {false, false, true, true}
            },
            {
                {false, false, false, false},
                {false, false, true, false},
                {false, true, true, false},
                {false, true, false, false}
            }
        });
    }
    
}
