package fr.wakestufou.tetris.models;

public class Square {
    
}
