package fr.wakestufou.tetris.view;

public class GameView {
    
}
